force-app/main/default/objects/Waste_Disposal_Facility__c/Waste_Disposal_Facility__c.object-meta.xml
<CustomObject>
    <label>Waste Disposal Facility</label>
    <nameField>
        <label>Waste Disposal Facility Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Waste Disposal Facilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>