force-app/main/default/objects/Waste_Disposal_Facility__c/fields/Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>Contact_Information__c</fullName>
    <label>Contact Information</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>