force-app/main/default/objects/Waste_Disposal_Facility__c/fields/Disposal_Costs__c.field-meta.xml
<CustomField>
    <fullName>Disposal_Costs__c</fullName>
    <label>Disposal Costs</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>