force-app/main/default/objects/Waste_Disposal_Facility__c/fields/Facility_Address__c.field-meta.xml
<CustomField>
    <fullName>Facility_Address__c</fullName>
    <label>Facility Address</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>