force-app/main/default/objects/Waste_Disposal_Facility__c/fields/Facility_Type__c.field-meta.xml
<CustomField>
    <fullName>Facility_Type__c</fullName>
    <label>Facility Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Landfill</fullName>
            </value>
            <value>
                <fullName>Recycling Center</fullName>
            </value>
            <value>
                <fullName>Composting Facility</fullName>
            </value>
            <value>
                <fullName>Transfer Station</fullName>
            </value>
            <value>
                <fullName>Incinerator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>