force-app/main/default/objects/Waste_Disposal_Facility__c/fields/Waste_Types_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Waste_Types_Accepted__c</fullName>
    <label>Waste Types Accepted</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Garbage</fullName>
            </value>
            <value>
                <fullName>Recyclables</fullName>
            </value>
            <value>
                <fullName>Hazardous Waste</fullName>
            </value>
            <value>
                <fullName>Green Waste</fullName>
            </value>
            <value>
                <fullName>Construction Waste</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>